--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@ DesktopOne/.vs/DesktopOne/v15/.suo
 DesktopOne/Debug/DesktopOne.exe
 *.sln
 *.ilk
+Ex201/.vs/Ex201/v15/.suo
+Ex201/Debug/Ex201.exe
+*.user
