long and short, the short i is a snort ....
long and short, the short i is a snort ....

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ DesktopOne/Debug/DesktopOne.exe
 Ex201/.vs/Ex201/v15/.suo
 Ex201/Debug/Ex201.exe
 *.user
+Ex201A/Debug/Ex201A.exe
+Ex201A/.vs/Ex201A/v15/.suo
