iomanip no es un maquillaje de disfraz, short i es un snort ....
iomanip no es un maquillaje de disfraz ....

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,6 @@ Ex201/Debug/Ex201.exe
 *.user
 Ex201A/Debug/Ex201A.exe
 Ex201A/.vs/Ex201A/v15/.suo
+Ex202B/.vs/Ex202B/v15/.suo
+Ex201A/Ex201A/Ex201A.aps
+Ex202B/Debug/Ex202B.exe
