視覚化のマントラを記述する
視覚化のマントラを記述する

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ Ex201A/.vs/Ex201A/v15/.suo
 Ex202B/.vs/Ex202B/v15/.suo
 Ex201A/Ex201A/Ex201A.aps
 Ex202B/Debug/Ex202B.exe
+Ex205/.vs/Ex205/v15/.suo
